[package]
name = "simple-draw"
version = "0.0.0"
authors = ["Jonas Pfeifer"]
edition = "2021"
license = "GPL-3"
description = "A library to draw simple shapes"
homepage = ""
repository = ""
readme = "README.md"
keywords = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
